-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.8.0
-
Windows
-
2f934cfb143df5fccdaab20b2982e54bb13a1bdf
On 64 bit systems the api dll from vector has the name vxlapi64.dll and trying to load the 32 bit dll fails. A possible solution could be to try to load also the 64bit dll if the first one fails.
Filename: vectorcan_symbols_p.h
Function: inline bool resolveSymbols(QLibrary *vectorcanLibrary)
Fix proposal: please see attached file.
| For Gerrit Dashboard: QTBUG-58774 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 185495,2 | VectorCAN: Load vxlapi64.dll for 64 bit builds | 5.8 | qt/qtserialbus | Status: MERGED | +2 | 0 |