VectorCAN: Load vxlapi64.dll for 64 bit builds

Task-number: QTBUG-58774
Change-Id: I9ac12dbb5ae267a063b3c60130ed86499bce22dc
Reviewed-by: Denis Shienkov <denis.shienkov@gmail.com>
Reviewed-by: Alex Blasche <alexander.blasche@qt.io>